# Privafile

./: .gitignore  Cargo.toml  diesel.toml  readme.txt
Privafile/: Privafile.sql  Privafile.toml
frontend/: package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/auth/: Login.vue
frontend/src/components/layout/: DriveLayout.vue  Header.vue  Sidebar.vue
frontend/src/components/player/: VideoModal.vue  VideoPlayer.vue
frontend/src/components/ui/: GlobalDragOverlay.vue
frontend/src/components/views/: FilesView.vue  StatsView.vue  UploadView.vue
frontend/src/lib/: privalib.js
frontend/src/stores/: appStore.js
migrations/2025-10-23-170756-0000_create_user/: down.sql  up.sql
migrations/2025-10-23-171024-0000_create_file/: up.sql
migrations/2025-10-25-173204-0000_create_chunks/: down.sql  up.sql
privacli-src/: Cargo.toml
privacli-src/src/: main.rs
src/: lib.rs  main.rs
src/core/: mod.rs  procedures.rs  structs.rs
src/core/cryptography/: authentication.rs  mod.rs
src/core/database/: mod.rs  operations.rs  schema.rs
src/core/utils/: mod.rs
src/servers/: mod.rs
src/servers/http/: mod.rs
src/servers/http/routes/: auth.rs  files.rs  mod.rs
