[package]
name = "privafile"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
blake2 = "0.10.6"
diesel = { version = "2.3.2", features = ["r2d2", "sqlite"] }
diesel_migrations = "2.3.0"
once_cell = "1.21.3"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }
zeroize = "1.8.2"
