[package]
name = "privafile"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
argon2 = "0.5.3"
arrayref = "0.3.9"
base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["serde"] }
blake2 = "0.10.6"
chrono = "0.4.42"
curve25519-dalek = "4.1.3"
dialoguer = "0.12.0"
diesel = { version = "2.3.2", features = ["r2d2", "sqlite"] }
diesel_migrations = "2.3.0"
ed25519-dalek = "2.2.0"
getrandom = "0.3.4"
hex = "0.4.3"
jwt = "0.16.0"
once_cell = "1.21.3"
rocket = { version = "0.5.1", features = ["json"] }
rusty_paseto = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }
x25519-dalek = "2.0.1"
zeroize = "1.8.2"
