[package]
name = "privacli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
ring = "0.17"
aes-gcm = "0.10"
hex = "0.4"
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
chrono = "0.4.42"
